--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -667,18 +667,25 @@ grouped by their layout.
 
 \begin{figure}[h]
 \centering \begin{bytefield}[endianness=big]{32} \bitheader{0-31} \\
-\BH{12}{imm[11:0]}&\BH{1}{h}& \BH{4}{rs1  }& \BH{3}{f3 }&\BH{1}{b}& \BH{4}{rd   }& \BH{8}{opcode}& \BH{8}{I-type} \\
-\BB{12}{imm[11:0]}&\BB{1}{h}& \BB{4}{rs1  }& \BB{3}{ 001 }&\BB{1}{b}& \BB{4}{rd   }& \BB{8}{\encopcode}& \BB{8}{LBU.cr} \\
-\BB{12}{imm[11:0]}&\BB{1}{h}& \BB{4}{rs1  }& \BB{3}{ 010 }&\BB{1}{0}& \BB{4}{rd   }& \BB{8}{\encopcode}& \BB{8}{LHU.cr} \\
-\BB{12}{imm[11:0]}&\BB{1}{0}& \BB{4}{rs1  }& \BB{3}{ 011 }&\BB{1}{0}& \BB{4}{rd   }& \BB{8}{\encopcode}& \BB{8}{LW.cr } \\
-\BB{12}{imm[11:0]}&\BB{1}{0}& \BB{4}{imm4}& \BB{3}{ 010 }&\BB{1}{1}& \BB{4}{rd   }& \BB{8}{\encopcode}& \BB{8}{LUI.cr} \\
-\BB{12}{imm[11:0]}&\BB{1}{0}& \BB{4}{imm4}& \BB{3}{ 011 }&\BB{1}{1}& \BB{4}{rd   }& \BB{8}{\encopcode}& \BB{8}{ORI.cr}
+\BH{12}{imm[11:0]}&\BH{1}{h}& \BH{4}{rs1 }& \BH{3}{f3 }&\BH{1}{b}& \BH{4}{rd   }& \BH{8}{opcode}& \BH{8}{I-type} \\
+\BB{12}{imm[11:0]}&\BB{1}{h}& \BB{4}{rs1 }& \BB{3}{ 001 }&\BB{1}{b}& \BB{4}{rd }& \BB{8}{\encopcode}& \BB{8}{LBU.cr} \\
+\BB{12}{imm[11:0]}&\BB{1}{h}& \BB{4}{rs1 }& \BB{3}{ 010 }&\BB{1}{0}& \BB{4}{rd }& \BB{8}{\encopcode}& \BB{8}{LHU.cr} \\
+\BB{2}{b0}&\BB{2}{b0}&\BB{2}{b2}&\BB{2}{b3}&\BB{4}{0000 }&\BB{1}{1}& \BB{4}{rs1}& \BB{3}{ 010 }&\BB{1}{1}& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{TWID.B} \\
+\BB{2}{n0}&\BB{2}{n1}&\BB{2}{n2}&\BB{2}{n3}&\BB{4}{0001 }&\BB{1}{1}& \BB{4}{rs1}& \BB{3}{ 010 }&\BB{1}{1}& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{TWID.LN}\\
+\BB{2}{n0}&\BB{2}{n1}&\BB{2}{n2}&\BB{2}{n3}&\BB{4}{0010 }&\BB{1}{1}& \BB{4}{rs1}& \BB{3}{ 010 }&\BB{1}{1}& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{TWID.HN}\\
+\BB{12}{imm[11:0]}&\BB{1}{0}& \BB{4}{rs1 }& \BB{3}{ 011 }&\BB{1}{0}& \BB{4}{rd }& \BB{8}{\encopcode}& \BB{8}{LW.cr } \\
+\BB{12}{imm[11:0]}&\BB{1}{0}& \BB{4}{imm4}& \BB{3}{ 011 }&\BB{1}{1}& \BB{4}{rd }& \BB{8}{\encopcode}& \BB{8}{LUI.cr} \\
+\BB{12}{imm[11:0]}&\BB{1}{1}& \BB{4}{imm4}& \BB{3}{ 011 }&\BB{1}{1}& \BB{4}{rd }& \BB{8}{\encopcode}& \BB{8}{ORI.cr}
 \end{bytefield}
-\caption{Load instruction encodings. The {\tt h} and {\tt b} bits refer to
+\caption{I-type instruction encodings. The {\tt h} and {\tt b} bits refer to
 which halfword, and which byte of a halfword respectivley the loaded
 value is written too. Where these fields are irrelevent, they are tied to
 zero. Here {\tt imm4} in the \ASM{LUI.cr} and \ASM{ORI.cr} instructions
-represent bits $15..12$ of the $16$ bit immediate they operate with.}
+represent bits $15..12$ of the $16$ bit immediate they operate with.
+The \ASM{TWID.*} instructions share the {\tt f3} field encoding with
+\ASM{LHU.cr}, and must be distinguished from it using the {\tt b}
+field. Likewise for distinguishing \ASM{LUI.cr} and \ASM{ORI.cr}
+from \ASM{LW.cr}.}
 \end{figure}
 
 
@@ -689,7 +696,7 @@ represent bits $15..12$ of the $16$ bit immediate they operate with.}
 \BB{7}{imm[11:5]}&\BB{1}{0}& \BB{4}{rs2  }&\BB{1}{h}& \BB{4}{rs1  }& \BB{3}{ 101 }& \BB{5}{imm[4:0]}& \BB{8}{\encopcode}& \BB{8}{SH.CR} \\
 \BB{7}{imm[11:5]}&\BB{1}{0}& \BB{4}{rs2  }&\BB{1}{0}& \BB{4}{rs1  }& \BB{3}{ 110 }& \BB{5}{imm[4:0]}& \BB{8}{\encopcode}& \BB{8}{SW.CR}
 \end{bytefield}
-\caption{Store instruction encodings. The {\tt h} and {\tt b} bits refer to
+\caption{S-type instruction encodings. The {\tt h} and {\tt b} bits refer to
 which halfword, and which byte of a halfword respectivley the value to be
 stored is sourced from. Where these fields are irrelevent, they are tied to
 zero.}
@@ -700,23 +707,20 @@ zero.}
 \centering
 \begin{bytefield}[endianness=big]{32}
 \bitheader{0-31}               \\
-\BH{7}{   f7  }& \BH{5}{rs2}& \BH{5}{rs1}& \BH{3}{f3 }& \BH{5}{rd}& \BH{8}{opcode}& \BH{8}{R-type} \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{MV2GPR } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{MV2COP } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{TWID.B } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{TWID.HN} \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{TWID.LN} \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{ADD.px } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{SUB.px } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{MUL.px } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{SLL.px } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{SRL.px } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{ROT.px } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{XOR.cr } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{AND.cr } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{OR.cr  } \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{SCATTER} \\
-\BB{7}{       }& \BB{5}{rs2}& \BB{5}{rs1}& \BB{3}{000}& \BB{5}{rd}& \BB{8}{\encopcode}& \BB{8}{GATHER } \\
+\BH{7}{   f7  }& \BH{1}{ }& \BH{5}{rs2}& \BH{1}{ }& \BH{5}{rs1}& \BH{3}{f3 }& \BH{1}{ }& \BH{4}{rd}& \BH{8}{opcode}& \BH{8}{R-type} \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{MV2GPR } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{MV2COP } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{ADD.px } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{SUB.px } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{MUL.px } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{SLL.px } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{SRL.px } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{ROT.px } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{XOR.cr } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{AND.cr } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{OR.cr  } \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{SCATTER} \\
+\BB{7}{       }& \BB{1}{ }& \BB{5}{rs2}& \BB{1}{ }& \BB{5}{rs1}& \BB{3}{000}& \BB{1}{ }& \BB{4}{rd}& \BB{8}{\encopcode}& \BB{8}{GATHER } \\
 \end{bytefield}
 \caption{Register type instruction encodings.}
 \end{figure}
