--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -3,6 +3,7 @@
 \usepackage[plain,shortend]{algorithm2e}
 \usepackage[backend=biber,style=numeric]{biblatex}
 \usepackage{bytefield}
+\usepackage{caption}
 \usepackage{currfile}
 \usepackage[margin={2cm}]{geometry}
 \usepackage[utf8]{inputenc}
