Add byte bit boundaries to state diagram

--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -20,7 +20,7 @@ The addressing is shown diagrammatically in table \ref{tab:state-addr}.
 \centering
 \begin{tabular}{|l|l l l l|}
 \hline
-\multicolumn{1}{|l|}{3:0} & \textbf{ } & \textbf{ } & \textbf{ } & \textbf{ } \\ \hline
+\multicolumn{1}{|l|}{3:0} & \textbf{31:24} & \textbf{23:16} & \textbf{15:8} & \textbf{7:0} \\ \hline
 \textbf{0 }   & r0.3       & r0.2       & r0.1       & r0.0       \\ \hline
 \textbf{1 }   & r1.3       & r1.2       & r1.1       & r1.0       \\ \hline
 \textbf{2 }   & r2.3       & r2.2       & r2.1       & r2.0       \\ \hline
